# hwcodec

./: Cargo.toml  build.rs
cpp/common/: util.cpp
cpp/ffmpeg_ram/: ffmpeg_ram_decode.cpp
src/: common.rs
src/vram/: decode.rs  encode.rs  mod.rs
