[package]
name = "hwcodec"
version = "0.7.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = []
vram = []
# intel-mfx: enable Intel Quick Sync Video (QSV) via Media SDK.
# Requires libmfx.lib from vcpkg (install intel-media-sdk:x64-windows-static).
# Not enabled by default because vpl.lib (oneVPL) does not export the
# deprecated MFXDoWork / MFXVideoCORE_SetBufferAllocator symbols.
intel-mfx = []

[dependencies]
log = "0.4"
serde_derive = "1.0"
serde = "1.0"
serde_json = "1.0"

[build-dependencies]
cc = "1.0"
bindgen = "0.59"

[dev-dependencies]
env_logger = "0.10"
rand = "0.8"

[target.'cfg(target_os="windows")'.dev-dependencies]
capture = { path = "dev/capture" }
render = { path = "dev/render" }
tool = { path = "dev/tool" }
